Apply suggestions from code review
Co-authored-by: Cristián Maureira-Fredes <cmaureir@users.noreply.github.com>

--- a/c-api/unicode.po
+++ b/c-api/unicode.po
@@ -251,7 +251,7 @@ msgstr ""
 "Retorna una de las constantes de tipo ``PyUnicode`` (ver arriba) que indican "
 "cuántos bytes por carácter utiliza este objeto Unicode para almacenar sus "
 "datos. *o* tiene que ser un objeto Unicode en la representación \"canónica"
-"\" (no marcada)."
+"\" (no verificada)."
 
 #: ../Doc/c-api/unicode.rst:165
 msgid ""
@@ -607,7 +607,7 @@ msgid ""
 "range, it will be transformed into UCS1 (:c:macro:`PyUnicode_1BYTE_KIND`)."
 msgstr ""
 "Si es necesario, la entrada *buffer* se copia y se transforma en la "
-"representación canónica. Por ejemplo, si el *buffer* es una cadena UCS4 (:c:"
+"representación canónica. Por ejemplo, si el *buffer* es una cadena de caracteres UCS4 (:c:"
 "macro:`PyUnicode_4BYTE_KIND`) y consta solo de puntos de código en el rango "
 "UCS1, se transformará en UCS1 (:c:macro:`PyUnicode_1BYTE_KIND`)."
 
