traducido archivo whatsnew/3.10 (#2141)
Closed #2078

Co-authored-by: Rodrigo Poblete <rodrigopoblete.dev@gmail.com>

--- a/whatsnew/3.10.po
+++ b/whatsnew/3.10.po
@@ -9,15 +9,16 @@ msgstr ""
 "Project-Id-Version: Python en Español 3.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-12-09 00:21+0100\n"
+"PO-Revision-Date: 2022-10-31 18:04-0300\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: \n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2.1\n"
 
 #: ../Doc/whatsnew/3.10.rst:3
 msgid "What's New In Python 3.10"
@@ -53,6 +54,9 @@ msgid ""
 "Python 3.10 was released on October 4, 2021. For full details, see the :ref:"
 "`changelog <changelog>`."
 msgstr ""
+"Este artículo explica las nuevas características de Python 3.10, en "
+"comparación con la 3.9. Python 3.10 se publicó el 4 de octubre de 2021. Para "
+"obtener todos los detalles, consulte el :ref:`changelog <changelog>`."
 
 #: ../Doc/whatsnew/3.10.rst:54
 msgid "Summary -- Release highlights"
@@ -1607,7 +1611,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.10.rst:1086
 msgid "enum"
-msgstr ""
+msgstr "enum"
 
 #: ../Doc/whatsnew/3.10.rst:1088
 msgid ""
@@ -1616,12 +1620,19 @@ msgid ""
 "module constants have a :func:`repr` of ``module_name.member_name``. "
 "(Contributed by Ethan Furman in :issue:`40066`.)"
 msgstr ""
+":class:`Enum` :func:`__repr__` ahora devuelve ``enum_name.member_name`` y :"
+"func:`__str__` ahora devuelve ``member_name``.  Los enums de Stdlib "
+"disponibles como constantes de módulo tienen un :func:`repr` de "
+"``module_name.member_name``. (Contribuido por Ethan Furman en :issue:"
+"`40066`.)"
 
 #: ../Doc/whatsnew/3.10.rst:1093
 msgid ""
 "Add :class:`enum.StrEnum` for enums where all members are strings. "
 "(Contributed by Ethan Furman in :issue:`41816`.)"
 msgstr ""
+"Añadir :class:`enum.StrEnum` para los enums en los que todos los miembros "
+"son cadenas. (Contribuido por Ethan Furman en :issue:`41816`.)"
 
 #: ../Doc/whatsnew/3.10.rst:1097
 msgid "fileinput"
@@ -1754,6 +1765,14 @@ msgid ""
 "Windows tab.  (Contributed by Mark Roseman and Terry Jan Reedy in :issue:"
 "`33962`.)"
 msgstr ""
+"Reorganizar el diálogo de configuración.  Dividir la pestaña General en las "
+"pestañas Windows y Shell/Ed.  Mover las fuentes de ayuda, que amplían el "
+"menú Ayuda, a la pestaña Extensiones.  Hacer espacio para nuevas opciones y "
+"acortar el diálogo. Esto último hace que el diálogo se adapte mejor a las "
+"pantallas pequeñas.  (Contribuido por Terry Jan Reedy en :issue:`40468`.) "
+"Mover la configuración del espacio de indentación de la pestaña de Fuente a "
+"la nueva pestaña Windows.  (Contribuido por Mark Roseman y Terry Jan Reedy "
+"en :issue:`33962`.)"
 
 #: ../Doc/whatsnew/3.10.rst:1162
 #, fuzzy
@@ -1811,19 +1830,23 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.10.rst:1184
 msgid "New in 3.10 maintenance releases."
-msgstr ""
+msgstr "Nuevo en la versión de mantenimiento 3.10."
 
 #: ../Doc/whatsnew/3.10.rst:1186
 msgid ""
 "Apply syntax highlighting to ``.pyi`` files. (Contributed by Alex Waygood "
 "and Terry Jan Reedy in :issue:`45447`.)"
 msgstr ""
+"Aplicar el resaltado de sintaxis a los archivos ``.pyi``. (Contribución de "
+"Alex Waygood y Terry Jan Reedy en :issue:`45447`.)"
 
 #: ../Doc/whatsnew/3.10.rst:1189
 msgid ""
 "Include prompts when saving Shell with inputs and outputs. (Contributed by "
 "Terry Jan Reedy in :gh:`95191`.)"
 msgstr ""
+"Incluir avisos al guardar Shell con entradas y salidas. (Contribuido por "
+"Terry Jan Reedy en :gh:`95191`.)"
 
 #: ../Doc/whatsnew/3.10.rst:1193
 msgid "importlib.metadata"
@@ -1899,13 +1922,15 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.10.rst:1230
 msgid "itertools"
-msgstr ""
+msgstr "itertools"
 
 #: ../Doc/whatsnew/3.10.rst:1232
 msgid ""
 "Add :func:`itertools.pairwise()`. (Contributed by Raymond Hettinger in :"
 "issue:`38200`.)"
 msgstr ""
+"Añadir :func:`itertools.pairwise()`. (Contribución de Raymond Hettinger en :"
+"issue:`38200`.)"
 
 #: ../Doc/whatsnew/3.10.rst:1236
 msgid "linecache"
