Translate c_api/object (#2140)
Closes #2060

Co-authored-by: Sofia Denner <sofia.denner@mercadolibre.com>
Co-authored-by: Cristián Maureira-Fredes <cmaureir@users.noreply.github.com>

--- a/c-api/object.po
+++ b/c-api/object.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-10-29 14:59-0300\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
+"PO-Revision-Date: 2022-10-31 19:22-0300\n"
+"Last-Translator: Sofía Denner <sofi.denner@gmail.com>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2\n"
 
 #: ../Doc/c-api/object.rst:6
 msgid "Object Protocol"
@@ -136,23 +137,22 @@ msgstr ""
 "``o.attr_name = v``."
 
 #: ../Doc/c-api/object.rst:84
-#, fuzzy
 msgid ""
 "If *v* is ``NULL``, the attribute is deleted. This behaviour is deprecated "
 "in favour of using :c:func:`PyObject_DelAttr`, but there are currently no "
 "plans to remove it."
 msgstr ""
-"Si *v* es ``NULL``, el atributo se elimina, sin embargo, esta característica "
-"está obsoleta a favor de usar :c:func:`PyObject_DelAttr`."
+"Si *v* es ``NULL``, el atributo se elimina. Este comportamiento está "
+"deprecado en favor de usar :c:func:`PyObject_DelAttr`, pero por el momento "
+"no hay planes de quitarlo."
 
 #: ../Doc/c-api/object.rst:96
-#, fuzzy
 msgid ""
 "If *v* is ``NULL``, the attribute is deleted, but this feature is deprecated "
 "in favour of using :c:func:`PyObject_DelAttrString`."
 msgstr ""
 "Si *v* es ``NULL``, el atributo se elimina, sin embargo, esta característica "
-"está obsoleta a favor de usar :c:func:`PyObject_DelAttrString`."
+"está deprecada en favor de usar :c:func:`PyObject_DelAttrString`."
 
 #: ../Doc/c-api/object.rst:102
 msgid ""
@@ -199,10 +199,15 @@ msgid ""
 "efficient to call :c:func:`PyObject_GetAttr` when accessing an attribute on "
 "the object."
 msgstr ""
+"Esta función también puede ser llamada para obtener el :py:attr:`~object."
+"__dict__` del objeto *o*. Se pasa *context* igual a ``NULL`` cuando se lo "
+"llama. Dado que esta función puede necesitar asignar memoria para el "
+"diccionario, puede ser más eficiente llamar a :c:func:`PyObject_GetAttr` "
+"para acceder a un atributo del objeto."
 
 #: ../Doc/c-api/object.rst:135
 msgid "On failure, returns ``NULL`` with an exception set."
-msgstr ""
+msgstr "En caso de fallo, retorna ``NULL`` con una excepción establecida."
 
 #: ../Doc/c-api/object.rst:142
 msgid ""
@@ -217,6 +222,8 @@ msgid ""
 "Return a pointer to :py:attr:`~object.__dict__` of the object *obj*. If "
 "there is no ``__dict__``, return ``NULL`` without setting an exception."
 msgstr ""
+"Retorna un puntero al :py:attr:`~object.__dict__` del objeto *obj*. Si no "
+"hay ``__dict__``, retorna ``NULL`` sin establecer una excepción."
 
 #: ../Doc/c-api/object.rst:153
 msgid ""
@@ -224,6 +231,9 @@ msgid ""
 "more efficient to call :c:func:`PyObject_GetAttr` when accessing an "
 "attribute on the object."
 msgstr ""
+"Esta función puede necesitar asignar memoria para el diccionario, por lo que "
+"puede ser más eficiente llamar a :c:func:`PyObject_GetAttr` para acceder a "
+"un atributo del objeto."
 
 #: ../Doc/c-api/object.rst:160
 msgid ""
@@ -418,13 +428,12 @@ msgstr ""
 "``-1``. Este es el equivalente de la expresión de Python ``hash(o)``."
 
 #: ../Doc/c-api/object.rst:277
-#, fuzzy
 msgid ""
 "The return type is now Py_hash_t.  This is a signed integer the same size "
 "as :c:type:`Py_ssize_t`."
 msgstr ""
 "El tipo de retorno ahora es *Py_hash_t*. Este es un entero con signo del "
-"mismo tamaño que *Py_ssize_t*."
+"mismo tamaño que :c:type:`Py_ssize_t`."
 
 #: ../Doc/c-api/object.rst:284
 msgid ""
@@ -459,7 +468,6 @@ msgstr ""
 "de error, retorna ``-1``."
 
 #: ../Doc/c-api/object.rst:308
-#, fuzzy
 msgid ""
 "When *o* is non-``NULL``, returns a type object corresponding to the object "
 "type of object *o*. On failure, raises :exc:`SystemError` and returns "
@@ -473,9 +481,9 @@ msgstr ""
 "de objeto del objeto *o*. En caso de falla, lanza :exc:`SystemError` y "
 "retorna ``NULL``. Esto es equivalente a la expresión de Python ``type(o)``. "
 "Esta función incrementa el recuento de referencia del valor de retorno. "
-"Realmente no hay razón para usar esta función en lugar de la expresión común "
-"``o->ob_type``, que retorna un puntero de tipo :c:type:`PyTypeObject*`, "
-"excepto cuando se necesita el recuento de referencias incrementado."
+"Realmente no hay razón para usar esta función en lugar de la función :c:func:"
+"`Py_TYPE()`, que retorna un puntero de tipo :c:expr:`PyTypeObject*`, excepto "
+"cuando se necesita el recuento de referencias incrementado."
 
 #: ../Doc/c-api/object.rst:319
 msgid ""
