Minor fixes while preparing the PDF

--- a/tutorial/inputoutput.po
+++ b/tutorial/inputoutput.po
@@ -145,7 +145,7 @@ msgid ""
 msgstr ""
 "El módulo :mod:`string` contiene una clase :class:`~string.Template` que "
 "ofrece otra forma de sustituir valores en cadenas, utilizando marcadores de "
-"posición como `$x`` y reemplazarlos con valores desde un diccionario, pero "
+"posición como ``$x`` y reemplazarlos con valores desde un diccionario, pero "
 "esto ofrece mucho menos control en el formato."
 
 #: ../Doc/tutorial/inputoutput.rst:100
@@ -253,16 +253,15 @@ msgstr ""
 "Si tiene una cadena de caracteres de formato realmente larga que no desea "
 "dividir, sería bueno si pudiera hacer referencia a las variables que se "
 "formatearán por nombre en lugar de por posición. Esto se puede hacer "
-"simplemente pasando el dict y usando corchetes ``'[]'`` para acceder a las "
+"simplemente pasando el diccionario y usando corchetes ``'[]'`` para acceder a las "
 "claves. ::"
 
 #: ../Doc/tutorial/inputoutput.rst:192
-#, fuzzy
 msgid ""
 "This could also be done by passing the ``table`` dictionary as keyword "
 "arguments with the ``**`` notation. ::"
 msgstr ""
-"Esto se podría hacer, también, pasando la tabla como argumentos nombrados "
+"Esto se podría hacer, también, pasando el diccionario ``table`` como argumentos nombrados "
 "con la notación '**'. ::"
 
 #: ../Doc/tutorial/inputoutput.rst:199
