--- a/tutorial/inputoutput.po
+++ b/tutorial/inputoutput.po
@@ -454,7 +454,7 @@ msgid ""
 "``f.close()`` **might** result in the arguments of ``f.write()`` not being "
 "completely written to the disk, even if the program exits successfully."
 msgstr ""
-"Al llamar a ``f.write()`` sin usar la palabra clave :keyword::`!with` o "
+"Al llamar a ``f.write()`` sin usar la palabra clave :keyword:`!with` o "
 "llamar a ``f.close()`` **podría** dar como resultado los argumentos de ``f."
 "write()`` no se escribe completamente en el disco, incluso si el programa se "
 "cierra correctamente."
