--- a/tutorial/inputoutput.po
+++ b/tutorial/inputoutput.po
@@ -253,16 +253,16 @@ msgstr ""
 "Si tiene una cadena de caracteres de formato realmente larga que no desea "
 "dividir, sería bueno si pudiera hacer referencia a las variables que se "
 "formatearán por nombre en lugar de por posición. Esto se puede hacer "
-"simplemente pasando el diccionario y usando corchetes ``'[]'`` para acceder a las "
-"claves. ::"
+"simplemente pasando el diccionario y usando corchetes ``'[]'`` para acceder "
+"a las claves. ::"
 
 #: ../Doc/tutorial/inputoutput.rst:192
 msgid ""
 "This could also be done by passing the ``table`` dictionary as keyword "
 "arguments with the ``**`` notation. ::"
 msgstr ""
-"Esto se podría hacer, también, pasando el diccionario ``table`` como argumentos nombrados "
-"con la notación '**'. ::"
+"Esto se podría hacer, también, pasando el diccionario ``table`` como "
+"argumentos nombrados con la notación '**'. ::"
 
 #: ../Doc/tutorial/inputoutput.rst:199
 msgid ""
