--- a/c-api/bytes.po
+++ b/c-api/bytes.po
@@ -11,22 +11,22 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-08-01 20:18+0200\n"
+"PO-Revision-Date: 2022-11-01 11:48+0100\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2\n"
 
 #: ../Doc/c-api/bytes.rst:6
 msgid "Bytes Objects"
 msgstr "Objetos Bytes"
 
 #: ../Doc/c-api/bytes.rst:8
-#, fuzzy
 msgid ""
 "These functions raise :exc:`TypeError` when expecting a bytes parameter and "
 "called with a non-bytes parameter."
@@ -197,7 +197,7 @@ msgstr ":attr:`%zd`"
 
 #: ../Doc/c-api/bytes.rst:87
 msgid ":c:type:`\\ Py_ssize_t`"
-msgstr ""
+msgstr ":c:type:`\\ Py_ssize_t`"
 
 #: ../Doc/c-api/bytes.rst:87
 msgid "Equivalent to ``printf(\"%zd\")``. [1]_"
@@ -258,9 +258,9 @@ msgstr "const void\\*"
 
 #: ../Doc/c-api/bytes.rst:102
 msgid ""
-"The hex representation of a C pointer. Mostly equivalent to "
-"``printf(\"%p\")`` except that it is guaranteed to start with the literal "
-"``0x`` regardless of what the platform's ``printf`` yields."
+"The hex representation of a C pointer. Mostly equivalent to ``printf(\"%p"
+"\")`` except that it is guaranteed to start with the literal ``0x`` "
+"regardless of what the platform's ``printf`` yields."
 msgstr ""
 "La representación hexadecimal de un puntero en C. Principalmente equivalente "
 "a ``printf(\"%p\")`` excepto que se garantiza que comience con el literal "
@@ -304,7 +304,6 @@ msgid "Return the length of the bytes in bytes object *o*."
 msgstr "Retorna la longitud de los bytes en el objeto bytes *o*."
 
 #: ../Doc/c-api/bytes.rst:137
-#, fuzzy
 msgid "Similar to :c:func:`PyBytes_Size`, but without error checking."
 msgstr ""
 "Forma macro de :c:func:`PyBytes_Size` pero sin verificación de errores."
@@ -320,7 +319,7 @@ msgid ""
 "`PyBytes_AsString` returns ``NULL`` and raises :exc:`TypeError`."
 msgstr ""
 "Retorna un puntero al contenido de *o*. El puntero se refiere al búfer "
-"interno de *o*, que consiste en bytes ``len(o) + 1``. El último byte en el "
+"interno de *o*, que consiste en ``len(o) + 1`` bytes. El último byte en el "
 "búfer siempre es nulo, independientemente de si hay otros bytes nulos. Los "
 "datos no deben modificarse de ninguna manera, a menos que el objeto se haya "
 "creado usando ``PyBytes_FromStringAndSize(NULL, size)``. No debe ser "
@@ -328,7 +327,6 @@ msgstr ""
 "`PyBytes_AsString` retorna ``NULL`` y lanza un :exc:`TypeError`."
 
 #: ../Doc/c-api/bytes.rst:154
-#, fuzzy
 msgid "Similar to :c:func:`PyBytes_AsString`, but without error checking."
 msgstr ""
 "Forma macro de :c:func:`PyBytes_AsString` pero sin verificación de errores."
@@ -348,7 +346,7 @@ msgid ""
 "raised."
 msgstr ""
 "Si *length* es ``NULL``, el objeto bytes no puede contener bytes nulos "
-"incrustados; si lo hace, la función retorna ``-1`` y se lanza un :exc:"
+"incrustados; en caso contrario, la función retorna ``-1`` y se lanza un :exc:"
 "`ValueError`."
 
 #: ../Doc/c-api/bytes.rst:166
@@ -361,8 +359,8 @@ msgid ""
 "returns ``-1`` and raises :exc:`TypeError`."
 msgstr ""
 "El búfer se refiere a un búfer interno de *obj*, que incluye un byte nulo "
-"adicional al final (sin contar en *length*). Los datos no deben modificarse "
-"de ninguna manera, a menos que el objeto se haya creado usando "
+"adicional al final (no está considerado en *length*). Los datos no deben "
+"modificarse de ninguna manera, a menos que el objeto se haya creado usando "
 "``PyBytes_FromStringAndSize(NULL, size)``. No debe ser desasignado. Si *obj* "
 "no es un objeto bytes en absoluto, :c:func:`PyBytes_AsStringAndSize` retorna "
 "``-1`` y lanza :exc:`TypeError`."
@@ -387,7 +385,7 @@ msgstr ""
 "*newpart* agregado a *bytes*; la persona que llama poseerá la nueva "
 "referencia. La referencia al valor anterior de *bytes* será robada. Si no se "
 "puede crear el nuevo objeto, la referencia anterior a *bytes* se seguirá "
-"descartando y el valor de *\\*bytes* se establecerá en ``NULL``; Se "
+"descartando y el valor de *\\*bytes* se establecerá en ``NULL``; se "
 "establecerá la excepción apropiada."
 
 #: ../Doc/c-api/bytes.rst:189
@@ -409,8 +407,8 @@ msgid ""
 "address of an existing bytes object as an lvalue (it may be written into), "
 "and the new size desired.  On success, *\\*bytes* holds the resized bytes "
 "object and ``0`` is returned; the address in *\\*bytes* may differ from its "
-"input value.  If the reallocation fails, the original bytes object at "
-"*\\*bytes* is deallocated, *\\*bytes* is set to ``NULL``, :exc:`MemoryError` "
+"input value.  If the reallocation fails, the original bytes object at *"
+"\\*bytes* is deallocated, *\\*bytes* is set to ``NULL``, :exc:`MemoryError` "
 "is set, and ``-1`` is returned."
 msgstr ""
 "Una forma de cambiar el tamaño de un objeto bytes aunque sea \"inmutable\". "
@@ -419,10 +417,10 @@ msgstr ""
 "esta función si el recuento en el objeto bytes de entrada no es uno. Pasa la "
 "dirección de un objeto de bytes existente como un *lvalue* (puede escribirse "
 "en él) y el nuevo tamaño deseado. En caso de éxito, *\\*bytes* retiene el "
-"objeto de bytes redimensionados y se retorna ``0``; la dirección en "
-"*\\*bytes* puede diferir de su valor de entrada. Si la reasignación falla, "
-"el objeto de bytes original en *\\*bytes* se desasigna, *\\*bytes* se "
-"establece en ``NULL``, :exc:`MemoryError` se establece y se retorna ``-1`` ."
+"objeto de bytes redimensionados y se retorna ``0``; la dirección en *"
+"\\*bytes* puede diferir de su valor de entrada. Si la reasignación falla, el "
+"objeto de bytes original en *\\*bytes* se desasigna, *\\*bytes* se establece "
+"en ``NULL``, :exc:`MemoryError` se establece y se retorna ``-1`` ."
 
 #~ msgid "Py_ssize_t"
 #~ msgstr "Py_ssize_t"
