--- a/c-api/sys.po
+++ b/c-api/sys.po
@@ -583,7 +583,7 @@ msgid ""
 "`Py_ssize_t`, regardless of whether ``PY_SSIZE_T_CLEAN`` was defined."
 msgstr ""
 "Tenga en cuenta que los caracteres de formato ``#`` deben tratarse como "
-"``Py_ssize_t``, independientemente de si se definió ``PY_SSIZE_T_CLEAN``."
+":c:type:`Py_ssize_t`, independientemente de si se definió ``PY_SSIZE_T_CLEAN``."
 
 #: ../Doc/c-api/sys.rst:353
 msgid ":func:`sys.audit` performs the same function from Python code."
