--- a/c-api/sys.po
+++ b/c-api/sys.po
@@ -192,7 +192,7 @@ msgstr ""
 "Configura el controlador de señal para la señal *i* como *h*; retorna el "
 "antiguo controlador de señal. Esta es una pequeña envoltura alrededor de :c:"
 "func:`sigaction` o :c:func:`signal`. ¡No llame a esas funciones "
-"directamente! :c:type:`PyOS_sighandler_t` es un alias *typedef* para :c:type:"
+"directamente! :c:type:`PyOS_sighandler_t` es un alias *typedef* para :c:expr:"
 "`void (\\*)(int)`."
 
 #: ../Doc/c-api/sys.rst:122
