--- a/c-api/sys.po
+++ b/c-api/sys.po
@@ -180,7 +180,7 @@ msgstr ""
 "Retorna el controlador de señal actual para la señal *i*. Esta es una "
 "pequeña envoltura alrededor de :c:func:`sigaction` o :c:func:`signal`. ¡No "
 "llame a esas funciones directamente! :c:type:`PyOS_sighandler_t` es un alias "
-"*typedef* para :c:type:`void (\\*)(int)`."
+"*typedef* para :c:expr:`void (\\*)(int)`."
 
 #: ../Doc/c-api/sys.rst:114
 msgid ""
