translate reference title
Co-authored-by: Marco Richetta <marco.richetta@mercadolibre.com>

--- a/whatsnew/3.6.po
+++ b/whatsnew/3.6.po
@@ -302,7 +302,7 @@ msgid ""
 msgstr ""
 "Se puede agregar un archivo ``._pth`` para forzar el modo aislado y "
 "especificar completamente todas las rutas de búsqueda para evitar búsquedas "
-"en el registro y el entorno. Consulte :ref:`the documentation "
+"en el registro y el entorno. Consulte :ref:`la documentación "
 "<windows_finding_modules>` para obtener más información."
 
 #: ../Doc/whatsnew/3.6.rst:167
