--- a/tutorial/controlflow.po
+++ b/tutorial/controlflow.po
@@ -144,7 +144,7 @@ msgstr ""
 
 #: ../Doc/tutorial/controlflow.rst:138
 msgid "A strange thing happens if you just print a range::"
-msgstr "Algo extraño sucede si muestras un *range*::"
+msgstr "Algo extraño sucede si muestras un ``range``::"
 
 #: ../Doc/tutorial/controlflow.rst:143
 msgid ""
