--- a/tutorial/inputoutput.po
+++ b/tutorial/inputoutput.po
@@ -262,7 +262,7 @@ msgid ""
 "arguments with the ``**`` notation. ::"
 msgstr ""
 "Esto se podría hacer, también, pasando el diccionario ``table`` como "
-"argumentos nombrados con la notación '**'. ::"
+"argumentos por palabra clave con la notación '**'. ::"
 
 #: ../Doc/tutorial/inputoutput.rst:199
 msgid ""
