update fuzzy translations in whatsnew/3.6 (#2142)
Este PR complementa el PR #2105, en el cual me había faltado actualizar
los mensajes `fuzzy` (macados como `Needs work` en poedit).

Co-authored-by: Sofia Denner <sofia.denner@mercadolibre.com>
Co-authored-by: Marco Richetta <marco.richetta@mercadolibre.com>

--- a/whatsnew/3.6.po
+++ b/whatsnew/3.6.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2022-10-31 19:48-0300\n"
 "Last-Translator: Sofía Denner <sofi.denner@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2\n"
 
 #: ../Doc/whatsnew/3.6.rst:3
 msgid "What's New In Python 3.6"
@@ -294,7 +295,6 @@ msgstr ""
 "<max-path>` para obtener más detalles."
 
 #: ../Doc/whatsnew/3.6.rst:163
-#, fuzzy
 msgid ""
 "A ``._pth`` file can be added to force isolated mode and fully specify all "
 "search paths to avoid registry and environment lookup. See :ref:`the "
@@ -302,19 +302,18 @@ msgid ""
 msgstr ""
 "Se puede agregar un archivo ``._pth`` para forzar el modo aislado y "
 "especificar completamente todas las rutas de búsqueda para evitar búsquedas "
-"en el registro y el entorno. Consulte :ref:`the documentation "
-"<finding_modules>` para obtener más información."
+"en el registro y el entorno. Consulte :ref:`la documentación "
+"<windows_finding_modules>` para obtener más información."
 
 #: ../Doc/whatsnew/3.6.rst:167
-#, fuzzy
 msgid ""
 "A ``python36.zip`` file now works as a landmark to infer :envvar:"
 "`PYTHONHOME`. See :ref:`the documentation <windows_finding_modules>` for "
 "more information."
 msgstr ""
 "Un archivo ``python36.zip`` ahora funciona como un punto de referencia para "
-"inferir :envvar:`PYTHONHOME`. Consulte :ref:`the documentation "
-"<finding_modules>` para obtener más información."
+"inferir :envvar:`PYTHONHOME`. Consulte :ref:`la documentación "
+"<windows_finding_modules>` para obtener más información."
 
 #: ../Doc/whatsnew/3.6.rst:176
 msgid "New Features"
@@ -1595,7 +1594,6 @@ msgid "contextlib"
 msgstr "contextlib"
 
 #: ../Doc/whatsnew/3.6.rst:961
-#, fuzzy
 msgid ""
 "The :class:`contextlib.AbstractContextManager` class has been added to "
 "provide an abstract base class for context managers.  It provides a sensible "
@@ -2427,13 +2425,12 @@ msgid "site"
 msgstr "sitio"
 
 #: ../Doc/whatsnew/3.6.rst:1391
-#, fuzzy
 msgid ""
 "When specifying paths to add to :attr:`sys.path` in a ``.pth`` file, you may "
 "now specify file paths on top of directories (e.g. zip files). (Contributed "
 "by Wolfgang Langner in :issue:`26587`)."
 msgstr ""
-"Al especificar rutas para agregar a :attr:`sys.path` en un archivo `.pth`, "
+"Al especificar rutas para agregar a :attr:`sys.path` en un archivo ``.pth``, "
 "ahora puede especificar rutas de archivo en la parte superior de los "
 "directorios (por ejemplo, archivos zip). (Contribuido por Wolfgang Langner "
 "en :issue:`26587`)."
@@ -2498,13 +2495,12 @@ msgstr ""
 "Stinner.)"
 
 #: ../Doc/whatsnew/3.6.rst:1424
-#, fuzzy
 msgid ""
 "New Linux constants ``TCP_USER_TIMEOUT`` and ``TCP_CONGESTION`` were added. "
 "(Contributed by Omar Sandoval, :issue:`26273`)."
 msgstr ""
 "Se agregaron las nuevas constantes de Linux ``TCP_USER_TIMEOUT`` y "
-"``TCP_CONGESTION``. (Contribuido por Omar Sandoval, número: `26273`)."
+"``TCP_CONGESTION``. (Contribuido por Omar Sandoval, :issue:`26273`)."
 
 #: ../Doc/whatsnew/3.6.rst:1429
 msgid "socketserver"
@@ -2900,13 +2896,12 @@ msgid "unicodedata"
 msgstr "unicodedata"
 
 #: ../Doc/whatsnew/3.6.rst:1646
-#, fuzzy
 msgid ""
 "The :mod:`unicodedata` module now uses data from `Unicode 9.0.0 <https://"
 "unicode.org/versions/Unicode9.0.0/>`_. (Contributed by Benjamin Peterson.)"
 msgstr ""
 "El módulo :mod:`unicodedata` ahora usa datos de `Unicode 9.0.0 <http://"
-"unicode.org/versions/Unicode9.0.0/>`_. (Contribuido por Benjamin Peterson.)"
+"unicode.org/versions/Unicode9.0.0/>`_. (Contribuido por Benjamin Peterson)."
 
 #: ../Doc/whatsnew/3.6.rst:1652
 msgid "unittest.mock"
