Minor fixes while preparing the PDF (#2148)
Co-authored-by: Cristián Maureira-Fredes <cmaureir@users.noreply.github.com>

--- a/tutorial/controlflow.po
+++ b/tutorial/controlflow.po
@@ -54,7 +54,7 @@ msgid ""
 "``switch`` or ``case`` statements found in other languages."
 msgstr ""
 "Puede haber cero o más bloques :keyword:`elif`, y el bloque :keyword:`else` "
-"es opcional. La palabra reservada ':keyword:`!elif`'es una abreviación de "
+"es opcional. La palabra reservada :keyword:`!elif` es una abreviación de "
 "'else if', y es útil para evitar un sangrado excesivo. Una secuencia :"
 "keyword:`!if` ... :keyword:`!elif` ... :keyword:`!elif` ... sustituye las "
 "sentencias ``switch`` o ``case`` encontradas en otros lenguajes."
@@ -66,8 +66,8 @@ msgid ""
 "statement useful. For more details see :ref:`tut-match`."
 msgstr ""
 "Si necesitas comparar un mismo valor con muchas constantes, o comprobar que "
-"tenga un tipo o atributos específicos puede que encuentres útil la sentencia "
-"keyword:`!match`. Para más detalles véase :ref:`tut-match`."
+"tenga un tipo o atributos específicos puede que encuentres útil la "
+"sentencia :keyword:`!match`. Para más detalles véase :ref:`tut-match`."
 
 #: ../Doc/tutorial/controlflow.rst:46
 msgid ":keyword:`!for` Statements"
@@ -144,7 +144,7 @@ msgstr ""
 
 #: ../Doc/tutorial/controlflow.rst:138
 msgid "A strange thing happens if you just print a range::"
-msgstr "Algo extraño sucede si muestras un `\t`range``::"
+msgstr "Algo extraño sucede si muestras un ``range``::"
 
 #: ../Doc/tutorial/controlflow.rst:143
 msgid ""
@@ -206,11 +206,11 @@ msgid ""
 "loop is terminated by a :keyword:`break` statement.  This is exemplified by "
 "the following loop, which searches for prime numbers::"
 msgstr ""
-"Las sentencias de bucle pueden tener una cláusula`!else` que es ejecutada "
-"cuando el bucle termina, después de agotar el iterable (con :keyword:`for`) "
-"o cuando la condición se hace falsa (con :keyword:`while`), pero no cuando "
-"el bucle se termina con la sentencia :keyword:`break`. Se puede ver el "
-"ejemplo en el siguiente bucle, que busca números primos::"
+"Las sentencias de bucle pueden tener una cláusula :keyword:`!else` que es "
+"ejecutada cuando el bucle termina, después de agotar el iterable (con :"
+"keyword:`for`) o cuando la condición se hace falsa (con :keyword:`while`), "
+"pero no cuando el bucle se termina con la sentencia :keyword:`break`. Se "
+"puede ver el ejemplo en el siguiente bucle, que busca números primos::"
 
 #: ../Doc/tutorial/controlflow.rst:193
 msgid ""
@@ -715,7 +715,7 @@ msgstr ""
 
 #: ../Doc/tutorial/controlflow.rst:581
 msgid "will print ``5``."
-msgstr "...imprimirá ```5``."
+msgstr "imprimirá ``5``."
 
 #: ../Doc/tutorial/controlflow.rst:583
 msgid ""
@@ -1242,8 +1242,8 @@ msgstr ""
 "en ninguna otra parte de la función. Las anotaciones de los parámetros se "
 "definen luego de dos puntos después del nombre del parámetro, seguido de una "
 "expresión que evalúa al valor de la anotación. Las anotaciones de retorno "
-"son definidas por el literal ->, seguidas de una expresión, entre la lista "
-"de parámetros y los dos puntos que marcan el final de la declaración :"
+"son definidas por el literal ``->``, seguidas de una expresión, entre la "
+"lista de parámetros y los dos puntos que marcan el final de la declaración :"
 "keyword:`def`. El siguiente ejemplo tiene un argumento posicional, uno "
 "nombrado, y el valor de retorno anotado::"
 
