--- a/tutorial/introduction.po
+++ b/tutorial/introduction.po
@@ -547,7 +547,7 @@ msgid ""
 "follows::"
 msgstr ""
 "Por supuesto, podemos usar Python para tareas más complicadas que sumar dos "
-"y dos. Por ejemplo, podemos escribir una parte inicial de la serie de "
+"y dos. Por ejemplo, podemos escribir una parte inicial de la `serie de "
 "Fibonacci <https://en.wikipedia.org/wiki/Fibonacci_number>`_ así::"
 
 #: ../Doc/tutorial/introduction.rst:496
