--- a/tutorial/introduction.po
+++ b/tutorial/introduction.po
@@ -645,7 +645,7 @@ msgid ""
 "as ``-(3**2)`` and thus result in ``-9``.  To avoid this and get ``9``, you "
 "can use ``(-3)**2``."
 msgstr ""
-"Debido a que ``**`` tiene una prioridad mayor que ```-``, ``-3**2`` se "
+"Debido a que ``**`` tiene una prioridad mayor que ``-``, ``-3**2`` se "
 "interpretará como ``-(3**2)``, por lo tanto dará como resultado ``-9``. Para "
 "evitar esto y obtener ``9``, puedes usar ``(-3)**2``."
 
