--- a/c-api/sys.po
+++ b/c-api/sys.po
@@ -582,8 +582,8 @@ msgid ""
 "Note that ``#`` format characters should always be treated as :c:type:"
 "`Py_ssize_t`, regardless of whether ``PY_SSIZE_T_CLEAN`` was defined."
 msgstr ""
-"Tenga en cuenta que los caracteres de formato ``#`` deben tratarse como "
-":c:type:`Py_ssize_t`, independientemente de si se definió ``PY_SSIZE_T_CLEAN``."
+"Tenga en cuenta que los caracteres de formato ``#`` deben tratarse como :c:"
+"type:`Py_ssize_t`, independientemente de si se definió ``PY_SSIZE_T_CLEAN``."
 
 #: ../Doc/c-api/sys.rst:353
 msgid ":func:`sys.audit` performs the same function from Python code."
