--- a/c-api/unicode.po
+++ b/c-api/unicode.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2022-11-01 00:25-0400\n"
+"PO-Revision-Date: 2022-11-01 13:45-0400\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language-Team: python-doc-es (https://mail.python.org/mailman3/lists/docs-es."
 "python.org)\n"
@@ -607,9 +607,10 @@ msgid ""
 "range, it will be transformed into UCS1 (:c:macro:`PyUnicode_1BYTE_KIND`)."
 msgstr ""
 "Si es necesario, la entrada *buffer* se copia y se transforma en la "
-"representación canónica. Por ejemplo, si el *buffer* es una cadena de caracteres UCS4 (:c:"
-"macro:`PyUnicode_4BYTE_KIND`) y consta solo de puntos de código en el rango "
-"UCS1, se transformará en UCS1 (:c:macro:`PyUnicode_1BYTE_KIND`)."
+"representación canónica. Por ejemplo, si el *buffer* es una cadena de "
+"caracteres UCS4 (:c:macro:`PyUnicode_4BYTE_KIND`) y consta solo de puntos de "
+"código en el rango UCS1, se transformará en UCS1 (:c:macro:"
+"`PyUnicode_1BYTE_KIND`)."
 
 #: ../Doc/c-api/unicode.rst:436
 msgid ""
