--- a/tutorial/whatnow.po
+++ b/tutorial/whatnow.po
@@ -58,10 +58,10 @@ msgid ""
 "other tasks. Skimming through the Library Reference will give you an idea of "
 "what's available."
 msgstr ""
-"Deberías navegar a través de este manual, que da una completa pero breve "
+"Deberías navegar a través de este manual, que da una completa (aunque breve) "
 "referencia sobre los tipos, funciones y módulos en la librería estándar. La "
 "distribución estándar de Python incluye *mucho* más código adicional. Hay "
-"módulos para leer  buzones Unix,  obtener documentos vía HTTP,  generar "
+"módulos para leer buzones Unix,  recuperar documentos vía HTTP,  generar "
 "números aleatorios, analizar opciones de línea de comandos, escribir "
 "programas CGI, comprimir datos y muchas más tareas. Echar una ojeada a la "
 "Librería de Referencia te dará una idea de lo que está disponible."
@@ -93,6 +93,8 @@ msgid ""
 "https://www.python.org:  The major Python web site.  It contains code, "
 "documentation, and pointers to Python-related pages around the web."
 msgstr ""
+https://www.python.org:  El mayor sitio web de Python. Contiene código, "
+"documentación, y enlaces a páginas web relacionadas con Python."
 
 #: ../Doc/tutorial/whatnow.rst:36
 msgid "https://docs.python.org:  Fast access to Python's  documentation."
@@ -129,7 +131,7 @@ msgid ""
 "and user-group meetings."
 msgstr ""
 "http://www.pyvideo.org recoge enlaces a vídeos relacionados con Python "
-"provenientes de conferencias y de reuniones de grupos de usuarios."
+"provenientes de conferencias y reuniones de grupos de usuarios."
 
 #: ../Doc/tutorial/whatnow.rst:51
 msgid ""
