--- a/tutorial/whatnow.po
+++ b/tutorial/whatnow.po
@@ -93,7 +93,7 @@ msgid ""
 "https://www.python.org:  The major Python web site.  It contains code, "
 "documentation, and pointers to Python-related pages around the web."
 msgstr ""
-https://www.python.org:  El mayor sitio web de Python. Contiene código, "
+"https://www.python.org:  El mayor sitio web de Python. Contiene código, "
 "documentación, y enlaces a páginas web relacionadas con Python."
 
 #: ../Doc/tutorial/whatnow.rst:36
