--- a/c-api/sys.po
+++ b/c-api/sys.po
@@ -595,7 +595,7 @@ msgid ""
 "unavoidable deprecation warning was raised."
 msgstr ""
 "Requiere :c:type:`Py_ssize_t` para los caracteres de formato ``#``. "
-"Anteriormente, se generaba una advertencia de deprecación inevitable."
+"Anteriormente, se lanzaba una advertencia de deprecación inevitable."
 
 #: ../Doc/c-api/sys.rst:365
 msgid ""
