Traducido archivo c-api/bytes

--- a/c-api/bytes.po
+++ b/c-api/bytes.po
@@ -258,9 +258,9 @@ msgstr "const void\\*"
 
 #: ../Doc/c-api/bytes.rst:102
 msgid ""
-"The hex representation of a C pointer. Mostly equivalent to ``printf(\"%p"
-"\")`` except that it is guaranteed to start with the literal ``0x`` "
-"regardless of what the platform's ``printf`` yields."
+"The hex representation of a C pointer. Mostly equivalent to "
+"``printf(\"%p\")`` except that it is guaranteed to start with the literal "
+"``0x`` regardless of what the platform's ``printf`` yields."
 msgstr ""
 "La representación hexadecimal de un puntero en C. Principalmente equivalente "
 "a ``printf(\"%p\")`` excepto que se garantiza que comience con el literal "
@@ -407,8 +407,8 @@ msgid ""
 "address of an existing bytes object as an lvalue (it may be written into), "
 "and the new size desired.  On success, *\\*bytes* holds the resized bytes "
 "object and ``0`` is returned; the address in *\\*bytes* may differ from its "
-"input value.  If the reallocation fails, the original bytes object at *"
-"\\*bytes* is deallocated, *\\*bytes* is set to ``NULL``, :exc:`MemoryError` "
+"input value.  If the reallocation fails, the original bytes object at "
+"*\\*bytes* is deallocated, *\\*bytes* is set to ``NULL``, :exc:`MemoryError` "
 "is set, and ``-1`` is returned."
 msgstr ""
 "Una forma de cambiar el tamaño de un objeto bytes aunque sea \"inmutable\". "
@@ -417,10 +417,10 @@ msgstr ""
 "esta función si el recuento en el objeto bytes de entrada no es uno. Pasa la "
 "dirección de un objeto de bytes existente como un *lvalue* (puede escribirse "
 "en él) y el nuevo tamaño deseado. En caso de éxito, *\\*bytes* retiene el "
-"objeto de bytes redimensionados y se retorna ``0``; la dirección en *"
-"\\*bytes* puede diferir de su valor de entrada. Si la reasignación falla, el "
-"objeto de bytes original en *\\*bytes* se desasigna, *\\*bytes* se establece "
-"en ``NULL``, :exc:`MemoryError` se establece y se retorna ``-1`` ."
+"objeto de bytes redimensionados y se retorna ``0``; la dirección en "
+"*\\*bytes* puede diferir de su valor de entrada. Si la reasignación falla, "
+"el objeto de bytes original en *\\*bytes* se desasigna, *\\*bytes* se "
+"establece en ``NULL``, :exc:`MemoryError` se establece y se retorna ``-1`` ."
 
 #~ msgid "Py_ssize_t"
 #~ msgstr "Py_ssize_t"
