--- a/c-api/unicode.po
+++ b/c-api/unicode.po
@@ -250,8 +250,8 @@ msgid ""
 msgstr ""
 "Retorna una de las constantes de tipo ``PyUnicode`` (ver arriba) que indican "
 "cuántos bytes por carácter utiliza este objeto Unicode para almacenar sus "
-"datos. *o* tiene que ser un objeto Unicode en la representación \"canónica"
-"\" (no verificada)."
+"datos. *o* tiene que ser un objeto Unicode en la representación "
+"\"canónica\" (no verificada)."
 
 #: ../Doc/c-api/unicode.rst:165
 msgid ""
@@ -290,9 +290,9 @@ msgstr ""
 
 #: ../Doc/c-api/unicode.rst:195
 msgid ""
-"Read a character from a Unicode object *o*, which must be in the \"canonical"
-"\" representation.  This is less efficient than :c:func:`PyUnicode_READ` if "
-"you do multiple consecutive reads."
+"Read a character from a Unicode object *o*, which must be in the "
+"\"canonical\" representation.  This is less efficient than :c:func:"
+"`PyUnicode_READ` if you do multiple consecutive reads."
 msgstr ""
 "Lee un carácter de un objeto Unicode *o*, que debe estar en la "
 "representación \"canónica\". Esto es menos eficiente que :c:func:"
@@ -867,9 +867,9 @@ msgstr "const void\\*"
 
 #: ../Doc/c-api/unicode.rst:518
 msgid ""
-"The hex representation of a C pointer. Mostly equivalent to ``printf(\"%p"
-"\")`` except that it is guaranteed to start with the literal ``0x`` "
-"regardless of what the platform's ``printf`` yields."
+"The hex representation of a C pointer. Mostly equivalent to "
+"``printf(\"%p\")`` except that it is guaranteed to start with the literal "
+"``0x`` regardless of what the platform's ``printf`` yields."
 msgstr ""
 "La representación hexadecimal de un puntero en C. Principalmente equivalente "
 "a ``printf(\"%p\")`` excepto que se garantiza que comience con el literal "
@@ -949,8 +949,8 @@ msgid ""
 "``PyObject*`` argument is not ``NULL``)."
 msgstr ""
 "La unidad del formateador de ancho es el número de caracteres en lugar de "
-"bytes. La unidad del formateador de precisión es la cantidad de bytes para ``"
-"\"%s\"`` y ``\"%V\" `` (si el argumento ``PyObject*`` es ``NULL``), y una "
+"bytes. La unidad del formateador de precisión es la cantidad de bytes para "
+"``\"%s\"`` y ``\"%V\" `` (si el argumento ``PyObject*`` es ``NULL``), y una "
 "cantidad de caracteres para ``\"%A\"``, ``\"%U\"``, ``\"%S\"``, ``\"%R\"`` y "
 "``\"%V\"`` (si el argumento ``PyObject*`` no es ``NULL``)."
 
@@ -975,8 +975,8 @@ msgstr "Soporte agregado para ``\"%li\"``, ``\"%lli\"`` y ``\"%zi\"``."
 #: ../Doc/c-api/unicode.rst:564
 #, python-format
 msgid ""
-"Support width and precision formatter for ``\"%s\"``, ``\"%A\"``, ``\"%U"
-"\"``, ``\"%V\"``, ``\"%S\"``, ``\"%R\"`` added."
+"Support width and precision formatter for ``\"%s\"``, ``\"%A\"``, "
+"``\"%U\"``, ``\"%V\"``, ``\"%S\"``, ``\"%R\"`` added."
 msgstr ""
 "Soporte agregado para formateadores de anchura y precisión para ``\"%s\"``, "
 "``\"%A\"``, ``\"%U\"``, ``\"%V\"``, ``\"%S\"``, ``\"%R\"``."
@@ -1040,8 +1040,8 @@ msgstr ""
 
 #: ../Doc/c-api/unicode.rst:617
 msgid ""
-"Fill a string with a character: write *fill_char* into ``unicode[start:start"
-"+length]``."
+"Fill a string with a character: write *fill_char* into ``unicode[start:"
+"start+length]``."
 msgstr ""
 "Rellena una cadena con un carácter: escriba *fill_char* en ``unicode[inicio:"
 "inicio+longitud]``."
@@ -1268,17 +1268,17 @@ msgstr ""
 #: ../Doc/c-api/unicode.rst:774
 msgid ""
 "Decode a string from UTF-8 on Android and VxWorks, or from the current "
-"locale encoding on other platforms. The supported error handlers are ``"
-"\"strict\"`` and ``\"surrogateescape\"`` (:pep:`383`). The decoder uses ``"
-"\"strict\"`` error handler if *errors* is ``NULL``.  *str* must end with a "
+"locale encoding on other platforms. The supported error handlers are "
+"``\"strict\"`` and ``\"surrogateescape\"`` (:pep:`383`). The decoder uses "
+"``\"strict\"`` error handler if *errors* is ``NULL``.  *str* must end with a "
 "null character but cannot contain embedded null characters."
 msgstr ""
 "Decodifica una cadena de caracteres UTF-8 en Android y VxWorks, o de la "
 "codificación de configuración regional actual en otras plataformas. Los "
-"manejadores de errores admitidos son ``\"estricto\"`` y ``\"subrogateescape"
-"\"`` (:pep:`383`). El decodificador usa el controlador de errores ``"
-"\"estricto\"`` si *errors* es``NULL``. *str* debe terminar con un carácter "
-"nulo pero no puede contener caracteres nulos incrustados."
+"manejadores de errores admitidos son ``\"estricto\"`` y "
+"``\"subrogateescape\"`` (:pep:`383`). El decodificador usa el controlador de "
+"errores ``\"estricto\"`` si *errors* es``NULL``. *str* debe terminar con un "
+"carácter nulo pero no puede contener caracteres nulos incrustados."
 
 #: ../Doc/c-api/unicode.rst:781
 msgid ""
@@ -1322,10 +1322,10 @@ msgstr ""
 #: ../Doc/c-api/unicode.rst:810
 msgid ""
 "Encode a Unicode object to UTF-8 on Android and VxWorks, or to the current "
-"locale encoding on other platforms. The supported error handlers are ``"
-"\"strict\"`` and ``\"surrogateescape\"`` (:pep:`383`). The encoder uses ``"
-"\"strict\"`` error handler if *errors* is ``NULL``. Return a :class:`bytes` "
-"object. *unicode* cannot contain embedded null characters."
+"locale encoding on other platforms. The supported error handlers are "
+"``\"strict\"`` and ``\"surrogateescape\"`` (:pep:`383`). The encoder uses "
+"``\"strict\"`` error handler if *errors* is ``NULL``. Return a :class:"
+"`bytes` object. *unicode* cannot contain embedded null characters."
 msgstr ""
 "Codifica un objeto Unicode UTF-8 en Android y VxWorks, o en la codificación "
 "local actual en otras plataformas. Los manejadores de errores admitidos son "
@@ -1563,8 +1563,8 @@ msgstr ""
 #: ../Doc/c-api/unicode.rst:971
 msgid ""
 "Returns a buffer allocated by :c:func:`PyMem_Alloc` (use :c:func:"
-"`PyMem_Free` to free it) on success. On error, returns ``NULL`` and *"
-"\\*size* is undefined. Raises a :exc:`MemoryError` if memory allocation is "
+"`PyMem_Free` to free it) on success. On error, returns ``NULL`` and "
+"*\\*size* is undefined. Raises a :exc:`MemoryError` if memory allocation is "
 "failed."
 msgstr ""
 "Retorna un búfer asignado por :c:func:`PyMem_Alloc` (utilice :c:func:"
@@ -1861,8 +1861,8 @@ msgid ""
 msgstr ""
 "Decodifica *size* bytes de una cadena de caracteres de búfer codificada "
 "UTF-16 y retorna el objeto Unicode correspondiente. *errors* (si no es "
-"``NULL``) define el manejo de errores. Su valor predeterminado es \"estricto"
-"\"."
+"``NULL``) define el manejo de errores. Su valor predeterminado es "
+"\"estricto\"."
 
 #: ../Doc/c-api/unicode.rst:1170
 msgid ""
@@ -1876,8 +1876,8 @@ msgstr ""
 "son una marca de orden de bytes (BOM), el decodificador cambia a este orden "
 "de bytes y la BOM no se copia en la cadena de caracteres Unicode resultante. "
 "Si ``*byteorder`` es ``-1`` o ``1``, cualquier marca de orden de bytes se "
-"copia en la salida (donde dará como resultado un ``\\ufeff`` o un carácter ``"
-"\\ufffe``)."
+"copia en la salida (donde dará como resultado un ``\\ufeff`` o un carácter "
+"``\\ufffe``)."
 
 #: ../Doc/c-api/unicode.rst:1176
 #, fuzzy
@@ -2447,8 +2447,8 @@ msgstr ""
 msgid ""
 "Intern the argument *\\*string* in place.  The argument must be the address "
 "of a pointer variable pointing to a Python Unicode string object.  If there "
-"is an existing interned string that is the same as *\\*string*, it sets *"
-"\\*string* to it (decrementing the reference count of the old string object "
+"is an existing interned string that is the same as *\\*string*, it sets "
+"*\\*string* to it (decrementing the reference count of the old string object "
 "and incrementing the reference count of the interned string object), "
 "otherwise it leaves *\\*string* alone and interns it (incrementing its "
 "reference count). (Clarification: even though there is a lot of talk about "
