--- a/c-api/typeobj.po
+++ b/c-api/typeobj.po
@@ -600,8 +600,8 @@ msgid ""
 msgstr ""
 "Un nombre de ranura entre paréntesis indica que está (efectivamente) en "
 "desuso. Los nombres entre paréntesis angulares deben tratarse como de solo "
-"lectura. Los nombres entre corchetes son solo para uso interno. \"<R>"
-"\" (como prefijo) significa que el campo es obligatorio (no debe ser "
+"lectura. Los nombres entre corchetes son solo para uso interno. "
+"\"<R>\" (como prefijo) significa que el campo es obligatorio (no debe ser "
 "``NULL``)."
 
 #: ../Doc/c-api/typeobj.rst:156
@@ -1686,8 +1686,8 @@ msgstr ""
 #: ../Doc/c-api/typeobj.rst:750
 msgid "An optional pointer to the get-attribute-string function."
 msgstr ""
-"Un puntero opcional a la función \"obtener atributo cadena de caracteres"
-"\" (*get-attribute-string*)."
+"Un puntero opcional a la función \"obtener atributo cadena de "
+"caracteres\" (*get-attribute-string*)."
 
 #: ../Doc/c-api/typeobj.rst:752
 msgid ""
@@ -3092,9 +3092,10 @@ msgid ""
 "valid C99 address constants."
 msgstr ""
 "La inicialización de ranuras está sujeta a las reglas de inicialización de "
-"globales. C99 requiere que los inicializadores sean \"constantes de dirección"
-"\". Los designadores de funciones como :c:func:`PyType_GenericNew`, con "
-"conversión implícita a un puntero, son constantes de dirección C99 válidas."
+"globales. C99 requiere que los inicializadores sean \"constantes de "
+"dirección\". Los designadores de funciones como :c:func:`PyType_GenericNew`, "
+"con conversión implícita a un puntero, son constantes de dirección C99 "
+"válidas."
 
 #: ../Doc/c-api/typeobj.rst:1612
 msgid ""
