Traducido archivo c-api/refcounting

--- a/c-api/refcounting.po
+++ b/c-api/refcounting.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-10-30 18:20+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
+"PO-Revision-Date: 2022-11-04 09:05-0300\n"
+"Last-Translator: Rodrigo Poblete <rodrigopoblete.dev@gmail.com>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2.1\n"
 
 #: ../Doc/c-api/refcounting.rst:8
 msgid "Reference Counting"
@@ -203,12 +204,18 @@ msgid ""
 "Increment the reference count for object *o*. A function version of :c:func:"
 "`Py_XINCREF`. It can be used for runtime dynamic embedding of Python."
 msgstr ""
+"Incrementa el conteo de referencias para objeto *o*. Una versión de la "
+"función :c:func:`Py_XINCREF`. Puede utilizarse para la integración dinámica "
+"en tiempo de ejecución de Python."
 
 #: ../Doc/c-api/refcounting.rst:120
 msgid ""
 "Decrement the reference count for object *o*. A function version of :c:func:"
 "`Py_XDECREF`. It can be used for runtime dynamic embedding of Python."
 msgstr ""
+"Disminuye el conteo de referencias del objeto *o*. Una versión de la "
+"función :c:func:`Py_XDECREF`. Puede utilizarse para la integración dinámica "
+"en tiempo de ejecución de Python."
 
 #: ../Doc/c-api/refcounting.rst:124
 msgid ""
