Traducido archivo c-api/frame

--- a/c-api/frame.po
+++ b/c-api/frame.po
@@ -4,76 +4,89 @@
 # package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Python en Español 3.11\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2022-11-04 09:53-0300\n"
+"Last-Translator: Rodrigo Poblete <rodrigopoblete.dev@gmail.com>\n"
+"Language-Team: \n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2.1\n"
 
 #: ../Doc/c-api/frame.rst:4
 msgid "Frame Objects"
-msgstr ""
+msgstr "Objetos Frame"
 
 #: ../Doc/c-api/frame.rst:8
 msgid "The C structure of the objects used to describe frame objects."
 msgstr ""
+"La estructura C de los objetos utilizados para describir los objetos del "
+"frame."
 
 #: ../Doc/c-api/frame.rst:10
 msgid "There are no public members in this structure."
-msgstr ""
+msgstr "No hay miembros públicos en esta estructura."
 
 #: ../Doc/c-api/frame.rst:12
 msgid ""
 "The members of this structure were removed from the public C API. Refer to "
 "the :ref:`What's New entry <pyframeobject-3.11-hiding>` for details."
 msgstr ""
+"Los miembros de esta estructura se han eliminado de la API pública de C. "
+"Consulte la entrada :ref:`Novedades <pyframeobject-3.11-hiding>` para más "
+"detalles."
 
 #: ../Doc/c-api/frame.rst:17
 msgid ""
 "The :c:func:`PyEval_GetFrame` and :c:func:`PyThreadState_GetFrame` functions "
 "can be used to get a frame object."
 msgstr ""
+"Las funciones :c:func:`PyEval_GetFrame` y :c:func:`PyThreadState_GetFrame` "
+"pueden utilizarse para obtener un objeto frame."
 
 #: ../Doc/c-api/frame.rst:20
 msgid "See also :ref:`Reflection <reflection>`."
-msgstr ""
+msgstr "Véase también :ref:`Reflexión <reflection>`."
 
 #: ../Doc/c-api/frame.rst:25
 msgid "Get the *frame* next outer frame."
-msgstr ""
+msgstr "Obtiene el *frame* exterior siguiente."
 
 #: ../Doc/c-api/frame.rst:27
 msgid ""
 "Return a :term:`strong reference`, or ``NULL`` if *frame* has no outer frame."
 msgstr ""
+"Retorna una :term:`strong reference`, o ``NULL`` si *frame* no tiene frame "
+"exterior."
 
 #: ../Doc/c-api/frame.rst:35
 msgid "Get the *frame*'s ``f_builtins`` attribute."
-msgstr ""
+msgstr "Obtiene el atributo ``f_builtins`` del *frame*."
 
 #: ../Doc/c-api/frame.rst:37 ../Doc/c-api/frame.rst:68
 msgid "Return a :term:`strong reference`. The result cannot be ``NULL``."
 msgstr ""
+"Retorna una :term:`strong reference`, o ``NULL`` si *frame* no tiene frame "
+"exterior."
 
 #: ../Doc/c-api/frame.rst:44
 msgid "Get the *frame* code."
-msgstr ""
+msgstr "Obtenga el código *frame*."
 
 #: ../Doc/c-api/frame.rst:46 ../Doc/c-api/frame.rst:86
 msgid "Return a :term:`strong reference`."
-msgstr ""
+msgstr "Retorna un :term:`strong reference`."
 
 #: ../Doc/c-api/frame.rst:48
 msgid "The result (frame code) cannot be ``NULL``."
-msgstr ""
+msgstr "El resultado (frame code) no puede ser ``NULL``."
 
 #: ../Doc/c-api/frame.rst:55
 msgid ""
@@ -81,27 +94,30 @@ msgid ""
 "``NULL`` if this frame is not owned by a generator. Does not raise an "
 "exception, even if the return value is ``NULL``."
 msgstr ""
+"Obtiene el generador, rutina o generador asíncrono al que pertenece este "
+"frame, o ``NULL`` si este frame no es propiedad de un generador. No lanza "
+"una excepción, incluso si el valor de retorno es ``NULL``."
 
 #: ../Doc/c-api/frame.rst:59
 msgid "Return a :term:`strong reference`, or ``NULL``."
-msgstr ""
+msgstr "Retorna un :term:`strong reference`, o ``NULL``."
 
 #: ../Doc/c-api/frame.rst:66
 msgid "Get the *frame*'s ``f_globals`` attribute."
-msgstr ""
+msgstr "Obtiene el atributo ``f_globals`` del *frame*."
 
 #: ../Doc/c-api/frame.rst:75
 msgid "Get the *frame*'s ``f_lasti`` attribute."
-msgstr ""
+msgstr "Obtiene el atributo ``f_lasti`` del *frame*."
 
 #: ../Doc/c-api/frame.rst:77
 msgid "Returns -1 if ``frame.f_lasti`` is ``None``."
-msgstr ""
+msgstr "Retorna -1 si ``frame.f_lasti`` es ``None``."
 
 #: ../Doc/c-api/frame.rst:84
 msgid "Get the *frame*'s ``f_locals`` attribute (:class:`dict`)."
-msgstr ""
+msgstr "Obtiene el atributo ``f_locals`` del *frame* (:class:`dict`)."
 
 #: ../Doc/c-api/frame.rst:93
 msgid "Return the line number that *frame* is currently executing."
-msgstr ""
+msgstr "Retorna el número de línea en la que se está ejecutando el *frame*."
