--- a/tutorial/controlflow.po
+++ b/tutorial/controlflow.po
@@ -218,7 +218,7 @@ msgid ""
 "to the :keyword:`for` loop, **not** the :keyword:`if` statement.)"
 msgstr ""
 "(Sí, este es el código correcto. Fíjate bien: el ``else`` pertenece al "
-"ciclo :keyword:`for`, no al :keyword:`if`.)"
+"ciclo :keyword:`for`, **no** al :keyword:`if`.)"
 
 #: ../Doc/tutorial/controlflow.rst:196
 msgid ""
