Elimino punto extra

--- a/tutorial/controlflow.po
+++ b/tutorial/controlflow.po
@@ -889,7 +889,7 @@ msgid ""
 "positional-only parameters."
 msgstr ""
 "En detalle, es posible señalar algunos parámetros como *únicamente "
-"posicionales.*. En ese caso el orden de los parámetros es importante, y los "
+"posicionales*. En ese caso el orden de los parámetros es importante, y los "
 "parámetros no pueden ser indicados utilizando palabras claves. Parámetros "
 "únicamente posicionales son ubicados antes de una ``/`` (barra). La ``/`` es "
 "utilizada para separar lógicamente parámetros únicamente posicionales del "
