--- a/tutorial/controlflow.po
+++ b/tutorial/controlflow.po
@@ -218,7 +218,7 @@ msgid ""
 "to the :keyword:`for` loop, **not** the :keyword:`if` statement.)"
 msgstr ""
 "(Sí, este es el código correcto. Fíjate bien: el ``else`` pertenece al "
-"ciclo :keyword:`for`, no al :keyword:`if`.)"
+"ciclo :keyword:`for`, **no** al :keyword:`if`.)"
 
 #: ../Doc/tutorial/controlflow.rst:196
 msgid ""
@@ -889,7 +889,7 @@ msgid ""
 "positional-only parameters."
 msgstr ""
 "En detalle, es posible señalar algunos parámetros como *únicamente "
-"posicionales.*. En ese caso el orden de los parámetros es importante, y los "
+"posicionales*. En ese caso el orden de los parámetros es importante, y los "
 "parámetros no pueden ser indicados utilizando palabras claves. Parámetros "
 "únicamente posicionales son ubicados antes de una ``/`` (barra). La ``/`` es "
 "utilizada para separar lógicamente parámetros únicamente posicionales del "
